modules/gdscript/tests/scripts/parser/errors/annotation_tutorial.gd
# This annotation should be used within a documentation comment instead:
# ## @tutorial(Title): https://example.com

@tutorial("https://example.com")
const SOME_CONSTANT = "value"
